src/test/ui/privacy/private-type-in-interface.stderr
error: struct `m::Priv` is private
  --> $DIR/private-type-in-interface.rs:15:9
   |
LL | fn f(_: m::Alias) {}
   |         ^^^^^^^^ private

error: struct `m::Priv` is private
  --> $DIR/private-type-in-interface.rs:15:6
   |
LL | fn f(_: m::Alias) {}
   |      ^ private

error: struct `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:18:13
   |
LL | fn f_ext(_: ext::Alias) {}
   |             ^^^^^^^^^^ private

error: struct `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:18:10
   |
LL | fn f_ext(_: ext::Alias) {}
   |          ^ private

error: struct `m::Priv` is private
  --> $DIR/private-type-in-interface.rs:23:6
   |
LL | impl m::Alias {}
   |      ^^^^^^^^ private

error: struct `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:25:14
   |
LL | impl Tr1 for ext::Alias {}
   |              ^^^^^^^^^^ private

error: struct `m::Priv` is private
  --> $DIR/private-type-in-interface.rs:27:10
   |
LL | type A = <m::Alias as m::Trait>::X;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ private

error: struct `m::Priv` is private
  --> $DIR/private-type-in-interface.rs:32:11
   |
LL | fn g() -> impl Tr2<m::Alias> { 0 }
   |           ^^^^^^^^^^^^^^^^^^ private

error: struct `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:34:15
   |
LL | fn g_ext() -> impl Tr2<ext::Alias> { 0 }
   |               ^^^^^^^^^^^^^^^^^^^^ private

error: aborting due to 9 previous errors

